--- a/css/mobile.css
+++ b/css/mobile.css
@@ -22,10 +22,10 @@
 
 	/* Logo */
 
-	.custom-makerstudioslogo {
+	/*.custom-makerstudioslogo {
 		background-size: 65%;
 		margin: .5em 1% -.5em -13%;
-	}
+	}*/
 
 	/* Nav */
 
